objects/slt__EIT__c.object
<CustomObject>
    <description>Timeline Event configuration</description>
    <fields>
        <fullName>slt__AccountContactMatching__c</fullName>
        <inlineHelpText>When both Account and Contact IDs are provided (such as when using with People First), when to include this event in the Timeline</inlineHelpText>
        <label>Account/Contact Matching Logic</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OR</fullName>
                </value>
                <value>
                    <fullName>AND</fullName>
                </value>
                <value>
                    <fullName>ORA</fullName>
                </value>
                <value>
                    <fullName>ORC</fullName>
                </value>
                <value>
                    <fullName>CTX</fullName>
                    <default>true</default>
                    <label>CTX</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>slt__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Whether this Timeline Event is active or disabled</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>slt__Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If you pick a category, records selected by this Timeline Event can be hidden and shown using the category filter chooser in Timeline views</inlineHelpText>
        <label>Category</label>
        <referenceTo>slt__Category__c</referenceTo>
        <relationshipName>TimelineEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>slt__Color__c</fullName>
        <inlineHelpText>Optional: Color of timeline &quot;tape&quot; for events with end times. If you don&apos;t choose a Text Color, event titles will also be this color. If you add a Custom Tape Image, this color will underlie the tape, for color combos. (CSS colors like &apos;#5f2a3c&apos; or &apos;red&apos;)</inlineHelpText>
        <label>Tape Color (+Text)</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slt__CustSatBest__c</fullName>
        <inlineHelpText>To normalize customer disposition calculations, the max (or min) number of the range to express the best possible customer satisfaction</inlineHelpText>
        <label>Customer Disposition Range: Best Value</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>slt__CustSatEmptyNeutral__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If the customer disposition field is empty or null, count it as a neutral value toward total customer satisfaction (otherwise, ignore).</inlineHelpText>
        <label>Empty Value = Neutral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>slt__CustSatFieldPath__c</fullName>
        <label>Customer Disposition Field Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slt__CustSatField__c</fullName>
        <inlineHelpText>Optional field to use when accumulating and calculating customer satisfaction ratings (different numbering systems may be normalized and weighted)</inlineHelpText>
        <label>Customer Disposition Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slt__CustSatHalfLife__c</fullName>
        <inlineHelpText>The &quot;decay&quot; of a customer disposition rating, in days. This affects the amount of influence that an older customer disposition has against total customer satisfaction. A zero or blank half life does not decay.</inlineHelpText>
        <label>Customer Disposition Half Life (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>slt__CustSatOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Use this Timeline Event only for calculating customer satisfaction (do not display in Timeline)</inlineHelpText>
        <label>Disposition Tracker Only (No Timeline)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>slt__CustSatWeighting__c</fullName>
        <defaultValue>1.00</defaultValue>
        <inlineHelpText>A percentage multiplier of how much influence this type of event has in calculating cumulative customer satisfaction (0% = no weight, 100% = full weight, &gt;100% = overweighted)</inlineHelpText>
        <label>Customer Disposition Weighting</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>slt__CustSatWorst__c</fullName>
        <inlineHelpText>To normalize customer disposition calculations, the min (or max) number of the range to express the worst possible customer satisfaction</inlineHelpText>
        <label>Customer Disposition Range: Worst Value</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>slt__CustomTimelineObject__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Primary Salesforce object name for this custom Timeline</inlineHelpText>
        <label>Timeline Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slt__DescriptionFieldPath__c</fullName>
        <label>Description Field Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slt__DescriptionField__c</fullName>
        <inlineHelpText>Which field to use for a more detailed description of the event in the Timeline preview bubble (recommend fields with such as Description, Summary, etc)</inlineHelpText>
        <label>Description Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slt__Description__c</fullName>
        <inlineHelpText>The purpose of this Timeline Event (appears when hovering over items in the Timeline Events list)</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>slt__EndTimeValuePath__c</fullName>
        <label>End Time Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slt__EndTimeValue__c</fullName>
        <inlineHelpText>Optional: which field marks the ending date/time for this event in Timeline views</inlineHelpText>
        <label>End Time Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slt__ExecuteAsSubquery__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Required for some object types that are not directly queryable (such as Activity History or Open Activities: determined automatically)</inlineHelpText>
        <label>Execute as Subquery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>slt__HoverFieldPath__c</fullName>
        <label>Secondary/Hover Field Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slt__HoverField__c</fullName>
        <inlineHelpText>Which field to use as a subtitle in Timeline views and when hovering over events with the mouse (recommend fields with short values such as Status, Type, etc)</inlineHelpText>
        <label>Secondary/Hover Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slt__Icon__c</fullName>
        <inlineHelpText>Optional: URL to an icon image file to be displayed in the Timeline for events of this type (recommend 10x10 PNG image with transparency). This can be an external URL (http://...) or a relative URL to a Document or Static Resource (/resource/icon_png)</inlineHelpText>
        <label>Timeline Icon Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slt__Image__c</fullName>
        <inlineHelpText>Optional: URL to an image file to be displayed in the Timeline detail bubble for events of this type (recommend PNG image with transparency). This can be an external URL (http://...) or a relative URL to a Document or Static Resource (/resource/icon_png)</inlineHelpText>
        <label>Event Bubble Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slt__InclusionFieldPath__c</fullName>
        <label>Inclusion Field Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slt__InclusionField__c</fullName>
        <inlineHelpText>Optional field for whether to include records in Timeline (blank/not blank, 0/1+, no/yes, true/false, checkbox formula). You may configure multiple Timeline Events to display the same object differently (order dependent, with catch-alls at the bottom).</inlineHelpText>
        <label>Inclusion Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slt__ObjectType__c</fullName>
        <inlineHelpText>The Salesforce object name that you want to track in Timeline views</inlineHelpText>
        <label>Object Type</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slt__Order__c</fullName>
        <inlineHelpText>Order in which this Timeline Event is evaluated, lowest first</inlineHelpText>
        <label>Evaluation Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>slt__ParentAccountIDFieldPath__c</fullName>
        <label>Base Account ID Field Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slt__ParentAccountIDField__c</fullName>
        <inlineHelpText>Which lookup field to use for matching to an Account record</inlineHelpText>
        <label>Base Account ID Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slt__ParentContactIDFieldPath__c</fullName>
        <label>Base Contact ID Field Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slt__ParentContactIDField__c</fullName>
        <inlineHelpText>Which lookup field to use for matching to a Contact record</inlineHelpText>
        <label>Base Contact ID Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slt__RecordIDFieldPath__c</fullName>
        <label>Record ID Field Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slt__RecordIDField__c</fullName>
        <defaultValue>&quot;Id&quot;</defaultValue>
        <inlineHelpText>The ID field to use when opening the event Record. Normally this will just be the standard &quot;Id&quot; field, but in some cases you may want to open a different record, such as a parent or related record (i.e. the Opportunity ID of an Opportunity Contact Role)</inlineHelpText>
        <label>Record ID Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slt__RecordLimit__c</fullName>
        <defaultValue>50</defaultValue>
        <inlineHelpText>The maximum number of records to be queried and displayed by this Timeline Event (default = 50)</inlineHelpText>
        <label>Maximum # Records</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>slt__RecordNameFieldPath__c</fullName>
        <label>Event Title Field Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slt__RecordNameField__c</fullName>
        <inlineHelpText>Which field to use as the event title in Timeline views (recommend fields with short values such as Name, Subject, etc)</inlineHelpText>
        <label>Event Title Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slt__RecordTypes2__c</fullName>
        <inlineHelpText>When you choose record types, this Timeline Event will select only those types for the Timeline (none checked = all types). You may configure multiple Timeline Events to display the same object differently (order dependent, with catch-alls at the bottom).</inlineHelpText>
        <label>Record Types</label>
        <length>1900</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>slt__RecordTypes__c</fullName>
        <inlineHelpText>When you choose record types, this Timeline Event will select only those types for the Timeline (none checked = all types). You may configure multiple Timeline Events to display the same object differently (order dependent, with catch-alls at the bottom).</inlineHelpText>
        <label>Record Types (Deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slt__StartTimeValuePath__c</fullName>
        <label>Start Time Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slt__StartTimeValue__c</fullName>
        <inlineHelpText>Which field marks the starting date/time for this event in Timeline views</inlineHelpText>
        <label>Start Time Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slt__TapeImage__c</fullName>
        <inlineHelpText>Optional: URL to image file to superimpose with translucency over the tape color for duration events of this type (recommend 7-pixel tall horizontal repeating image with transparency). Can be external URL (http://...) or relative URL (/resource/icon_png)</inlineHelpText>
        <label>Custom Tape Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slt__TapeRepeat__c</fullName>
        <inlineHelpText>When using a custom tape, what kind of CSS repeat pattern to use for the background image</inlineHelpText>
        <label>Custom Tape Repeat Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>repeat</fullName>
                </value>
                <value>
                    <fullName>repeat-x</fullName>
                </value>
                <value>
                    <fullName>repeat-y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>slt__TextColor__c</fullName>
        <inlineHelpText>Optional: what color to display event title text in the Timeline. Enter any CSS-capable color, such as &quot;#a0327b&quot;, &quot;Blue&quot; or &quot;DarkGray&quot;.</inlineHelpText>
        <label>Title Text Color</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <label>Timeline Event</label>
    <nameField>
        <label>Descriptive Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Timeline Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>slt__Require_Base_ID</fullName>
        <active>true</active>
        <description>At least one base object ID field reference must be specified</description>
        <errorConditionFormula>AND( ISBLANK(slt__ParentAccountIDField__c),  ISBLANK(slt__ParentContactIDField__c) )</errorConditionFormula>
        <errorMessage>At least one base object ID field reference must be specified</errorMessage>
    </validationRules>
</CustomObject>